--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bandersnatch": "^1.11.1",
+    "chrome-remote-interface": "^0.32.1",
     "repl": "^0.1.3"
   }
 }
